k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
    tier: backend
spec:
  #  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: backend
